--- a/pom.xml
+++ b/pom.xml
@@ -389,6 +389,11 @@
 				<artifactId>pagehelper</artifactId>
 				<version>5.0.0</version>
 			</dependency>
+			<dependency>
+				<groupId>ma.glasnost.orika</groupId>
+				<artifactId>orika-core</artifactId>
+				<version>1.5.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
