--- a/helper/src/main/resources/application.yml
+++ b/helper/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
 #    default-property-inclusion: NON_EMPTY        
 mybatis:
   mapper-locations: classpath*:mapper/**/*.xml
+  config-location: classpath:mybatis-config.xml
  
   
 
