--- a/helper/Dockerfile
+++ b/helper/Dockerfile
@@ -1,8 +1,9 @@
-# 指定一个基础镜像centos
-FROM docker.io/centos:latest
-#安装应用执行的环境java
-RUN yum -y install java
-#将指定的jar文件复制到容器中
-COPY helper.jar /usr/local/
-#执行jar文件
-ENTRYPOINT ["java" ,"-jar","/usr/local/helper.jar"]
+# 指定一个基础镜像java.7
+FROM  java:7
+#VOLUME /tmp创建/tmp目录并持久化到Docker数据文件夹，因为Spring Boot使用的内嵌Tomcat容器默认使用/tmp作为工作目录
+VOLUME /tmp
+#ADD spring-boot-docker-0.1.0.jar app.jar 将应用jar包复制到/app.jar
+ADD target/helper.jar /app.jar
+#Dokcerfile中的命令每执行一条即产生一个新的镜像，当前命令总是在最新的镜像上执行
+RUN bash -c 'touch /app.jar'
+CMD ["java -server -Dspring.profiles.active=chengql -jar /app.jar"]
