--- a/helper/src/main/resources/application-chengql.yml
+++ b/helper/src/main/resources/application-chengql.yml
@@ -3,7 +3,7 @@ server:
 
 spring: 
   datasource: 
-    url: jdbc:mysql://127.0.0.1:3306/pddzushou?useUnicode=true&amp;characterEncoding=UTF-8
+    url: jdbc:mysql://127.0.0.1:3306/pddzushou?useUnicode=true&amp;characterEncoding=UTF-8&allowMultiQueries=true
     username: root
     password: 
     driver_class_name: com.mysql.jdbc.Driver
