--- a/service-qurtz/pom.xml
+++ b/service-qurtz/pom.xml
@@ -25,13 +25,32 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.github.pagehelper</groupId>
 			<artifactId>pagehelper</artifactId>
 		</dependency>
 			<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
+		</dependency> -->
+		<dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<exclusions> 
+				<exclusion>
+					 <groupId>org.mybatis</groupId>
+           			 <artifactId>mybatis</artifactId>
+				</exclusion>
+				<exclusion>
+					 <groupId>org.mybatis</groupId>
+            			 <artifactId>mybatis-spring</artifactId>
+				</exclusion>
+ 			</exclusions> 
 		</dependency>
 		<!-- lombok -->
 		<dependency>
