--- a/feihong/src/main/resources/application-chengql.yml
+++ b/feihong/src/main/resources/application-chengql.yml
@@ -5,7 +5,7 @@ spring:
   datasource: 
     url: jdbc:mysql://127.0.0.1:3306/feihong?useUnicode=true&amp;characterEncoding=UTF-8&allowMultiQueries=true
     username: root
-    password: 123456
+    password: 
     driver_class_name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
     
@@ -60,6 +60,7 @@ mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: false  
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 
   
